--- a/ProjetoAngular/zumbis.html
+++ b/ProjetoAngular/zumbis.html
@@ -2,7 +2,7 @@
     <div class="well">
         <h1>Ocorrencia de zumbis</h1>
     </div>
-    <table ng-if="ocorrencias.length > 0">
+    <table class="table" ng-if="ocorrencias.length > 0">
         <thead>
             <th>CEP</th>
             <th>Bairro</th>
